# desafio_beber

./: .gitignore  README.md  env.example  makefile  pyproject.toml
docker/: Dockerfile  docker-compose.yml
src/: __init__.py  main.py
src/application/: __init__.py
src/application/dtos/: __init__.py  document_dtos.py
src/application/use_cases/: __init__.py  query_documents_use_case.py  upload_document_use_case.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  document.py
src/domain/exceptions/: __init__.py  base.py  document_exceptions.py  embeddings_exceptions.py  vector_exceptions.py
src/domain/repositories/: __init__.py  document_repository.py  embedding_service.py  vector_repository.py
src/infra/: __init__.py
src/infra/config/: __init__.py  dependencies.py  di.py  logger.py  settings.py
src/infra/routes/: __init__.py  documents.py  health.py  query.py
src/infra/services/: __init__.py  elasticsearch_repository.py  file_parser.py  minio_repository.py  sentence_transformer_service.py
src/tests/: conftest.py
src/tests/application/: test_dtos.py
src/tests/domain/: test_entities.py
