[project]
name = "desafio-beber"
version = "0.1.0"
description = "RAG Semantic Search API with FastAPI, MinIO, and Qdrant"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "fastapi>=0.104.0",
    "dependency-injector>=4.48.2",    
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
    "sentence-transformers>=3.3.1",
    "elasticsearch[async]>=8.11.0,<9.0.0",
    "minio>=7.2.10",
    "python-multipart>=0.0.20",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "uvicorn>=0.34.0",
    "docling>=2.63.0",
    "result>=0.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
    "httpx>=0.28.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
